* Convolution: Improvements for convolution involving \delta_T.
* FunctionalTests: Further streamlined test configuration generation.
* Curve.java: isBurstDelay() was removed, functionality is provided by isDelayedInfiniteBurst() since version 2.2.7.
* Updated the output tests.
* Network.java: Fixed getting a server by its ID (had an offset of +1 before).
* Various fixes, performance improvements, reduced code duplication, improved parameter naming, etc.

v2.2.8 "Heavy Ion" (2016-Dec-06)
--------------------------------
* Fixed bugs concerning the delay and backlog bounding with \delta_T, T>0, service curves (delayed infinite burst).
* Improved JavaDocs for use_gamma and use_extra_gamma
Thanks to Mathias Kreider from the GSI Helmholtz Centre for Heavy Ion Research for reporting these bugs. This release was code named "Heavy Ion".

v2.2.7 (2016-Nov-17)
--------------------
* Fixed a bug when convolving \delta_T with T>0 (delayed infinite burst).
* Curve.java:
 - is_zero_delay_infinite_burst was replaced by the more general is_delayed_infinite_burst.
 - Visibility was restricted, reading the value is enabled by isDelayedInfiniteBurst().
* LinearSegment.java: Constructors that accept primitive double arguments were added.
* FunctionalTests: 
 - Streamlined test config generation.
 - assertEquals based on double values now considers the internal number representation's rounding error safety margin epsilon. 

v2.2.6 (2016-Mar-31)
--------------------
* Added the arrival bound burstiness reduction of the MMB & DFT 2016 paper
   "Improving Cross-Traffic Bounds in Feed-Forward Networks - There is a Job for Everyone".
  It can be switched on in the analysis configuration by setting the flag ab_consider_tfa_nodeBacklog to true.
* Apache Commons Math version updated to 3.6.1.

v2.2.5 (2015-Sep-29)
--------------------